--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,22 @@
 This is the change log for the Ada 2005 Math Extensions project
 (https://sourceforge.net/projects/gnat-math-extn/) on SourceForge.
 
+20170427
+
+        The procedure declaration for the generalized real eigensystem
+        solution was wrong: the eigenvectors should have been
+        complex. This has been corrected.
+
+        The tests now succeed with LAPACK 3.2 to 3.4, and 3.5 to 3.7
+        (the Fortran results for Real Generalized Eigensystems changed
+        at 3.5). This may be a symptom of some deeper problem, to be
+        investigated.
+
+        The package can be installed with the compiler by 'make install'.
+
+        The code is compatible with GNAT GPL 2016 and FSF GCC 7 (a
+        minor change was required to avoid a compilation warning).
+
 20130529
 
         Packages Ada_Numerics.Float_Arrays and .Long_Float_Arrays are
